[FIX] Update swagger notation
